namespace java net.lab1318.costume.api.services.object
namespace * costume.api.services.object

enum ObjectSortField {
	COLLECTION_ID,
	DATE_TEXT,
	INSTITUTION_ID,
	TITLE
}
